crates/bitnet-quantization/tests/snapshots/snapshot_wave25__w25_pipeline_config_valid_i2s.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave25.rs
expression: cfg
---
PipelineConfig {
    source_precision: F32,
    target_precision: I2S,
    calibration_samples: 512,
    error_threshold: 0.05,
}
