crates/bitnet-quantization/tests/snapshots/snapshot_wave25__w25_pipeline_config_valid_tl2.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave25.rs
expression: cfg
---
PipelineConfig {
    source_precision: F32,
    target_precision: TL2,
    calibration_samples: 256,
    error_threshold: 0.1,
}
