crates/bitnet-quantization/tests/snapshots/snapshot_wave25__w25_pipeline_config_zero_threshold_error.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave25.rs
expression: err.to_string()
---
Quantization error: Invalid input dimensions: error_threshold must be positive
