crates/bitnet-quantization/tests/snapshots/snapshot_wave25__w25_precision_all_variants_debug.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave25.rs
expression: variants
---
[
    F32,
    I2S,
    TL1,
    TL2,
]
