crates/bitnet-quantization/tests/snapshots/snapshot_wave25__w25_quantization_stage_all_debug.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave25.rs
expression: "labeled.join(\", \")"
---
Calibration=0, Quantization=1, Verification=2, PackingOptimization=3
