crates/bitnet-quantization/tests/snapshots/snapshot_wave25__w25_quantization_strategy_all_variants.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave25.rs
expression: strategies
---
[
    Scalar,
    SSE4_1,
    AVX2,
    AVX512,
    NEON,
]
