crates/bitnet-quantization/tests/snapshots/snapshot_wave25__w25_quantization_type_all_variants_debug.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave25.rs
expression: types
---
[
    I2S,
    TL1,
    TL2,
]
