crates/bitnet-quantization/tests/snapshots/snapshot_wave25__w25_quantization_type_display_all.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave25.rs
expression: displays
---
[
    "I2_S",
    "TL1",
    "TL2",
]
