crates/bitnet-quantization/tests/snapshots/snapshot_wave25__w25_simd_best_strategy_and_block_size.snap
---
source: crates/bitnet-quantization/tests/snapshot_wave25.rs
expression: "format!(\"strategy={strategy:?} block_size={block_size}\")"
---
strategy=AVX512 block_size=256
